appliances/opennebula/etc/sysconfig/iptables
*nat
-A POSTROUTING -o eth0 -j MASQUERADE
#-A POSTROUTING -o vpnbr0 -j MASQUERADE
COMMIT

# Generated by iptables-save v1.4.7 on Tue Aug 28 23:16:43 2012
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [52:8616]
-A INPUT -p tcp -m tcp --dport 9869 -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 

# VNC
-A INPUT -p tcp -m state --state NEW -m tcp -m multiport --dports 5901:5903,6001:6003 -j ACCEPT 
# OpenNebula VNC
-A INPUT -p tcp -m state --state NEW -m tcp -m multiport --dports 9869,29876,4567,33876 -j ACCEPT 
# N2N
-A INPUT -p udp --dport 7770:7779 -j ACCEPT
# NFS
-A INPUT -p tcp -m multiport --dports 111,1110,2049,4045 -j ACCEPT 
-A INPUT -p udp -m multiport --dports 111,1110,2049,4045 -j ACCEPT 

# OpenVPN
-A INPUT -p udp -m multiport --dports 1194,1195 -j ACCEPT
-A INPUT -i vpnbr0 -j ACCEPT
-A INPUT -i tap0 -j ACCEPT
-A INPUT -i tap1 -j ACCEPT

# VTun
-A INPUT -p tcp -m tcp --dport 5000 --tcp-flags SYN,RST,ACK SYN -j ACCEPT
-A INPUT -p udp --dport 5000 -j ACCEPT
-A INPUT -p udp --sport 5000 -j ACCEPT

-A INPUT -j REJECT --reject-with icmp-host-prohibited 

# dnsmasq
-A INPUT -p tcp -m multiport --dports 53,67 -j ACCEPT 
-A INPUT -p udp -m multiport --dports 53,67 -j ACCEPT 

# FORWARD
-A FORWARD -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Tue Aug 28 23:16:43 2012
